# rospy-message

soccer_msgs/: CMakeLists.txt  package.xml  setup.py
soccer_msgs/msg/: deep_output.msg  dilemma.msg  path_output.msg
soccer_msgs/soccer_msgs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
soccer_msgs/soccer_msgs/msg/: __init__.py  _ball_output.py  _deep_output.py  _dilemma.py  _field_output.py  _goal_output.py  _line_output.py  _localization_input.py  _localization_output.py  _obstacle_output.py  _path_output.py  _vision_outputs.py  localization_input.msg  localization_output.msg  obstacle_output.msg  vision_outputs.msg
